--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -66,6 +66,7 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
+    <script src="~/dist/vendor.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
